fix: adjust gap breakpoints

--- a/styles/_utilities.scss
+++ b/styles/_utilities.scss
@@ -88,15 +88,15 @@ $medium-height: 725px;
 @mixin gaps() {
     transition: gap 450ms ease-in-out, padding-top 450ms ease-in-out;
 
-    @media (max-height: 725px) {
+    @media (max-height: 640px) {
         gap: calc(var(--line-height) * 3);
     }
 
-    @media (max-height: 600px) {
+    @media (max-height: 585px) {
         gap: calc(var(--line-height) * 2);
     }
 
-    @media (max-height: 540px) {
+    @media (max-height: 530px) {
         gap: calc(var(--line-height) * 1);
     }
 }
